добавил сервис для объявлений, сделал create, но пока проблемы с DB. сделал postman коллекцию для auth. надо вынести общие методы для main в lib. надо разбить BD по сервисам
