# backend/docs/swagger.json
@@ -1,8 +1,16 @@
 {
+    "schemes": [
+        "http",
+        "https"
+    ],
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "API for Barter Port",
+        "title": "Barter Port API",
+        "contact": {},
+        "version": "1.0.0"
     },
+    "basePath": "/",
     "paths": {
         "/auth/login": {
             "post": {
@@ -24,7 +32,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_transport.loginReq"
+                            "$ref": "#/definitions/internal_auth_transport.loginReq"
                         }
                     }
                 ],
@@ -32,31 +40,31 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport.loginResp"
+                            "$ref": "#/definitions/internal_auth_transport.loginResp"
                         }
                     },
                     "400": {
                         "description": "Invalid request or credentials",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_transport_helpers.ErrorResponse"
+                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
                         }
                     },
                     "401": {
                         "description": "Incorrect password",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_transport_helpers.ErrorResponse"
+                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
                         }
                     },
                     "403": {
                         "description": "Email not verified",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_transport_helpers.ErrorResponse"
+                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_transport_helpers.ErrorResponse"
+                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
                         }
                     }
                 }
@@ -79,7 +87,7 @@
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_transport_helpers.ErrorResponse"
+                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
                         }
                     }
                 }
@@ -99,13 +107,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport.meResp"
+                            "$ref": "#/definitions/internal_auth_transport.meResp"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_transport_helpers.ErrorResponse"
+                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
                         }
                     }
                 }
@@ -128,19 +136,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport.refreshResponse"
+                            "$ref": "#/definitions/internal_auth_transport.refreshResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized or invalid token",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_transport_helpers.ErrorResponse"
+                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_transport_helpers.ErrorResponse"
+                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
                         }
                     }
                 }
@@ -166,7 +174,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_transport.registerReq"
+                            "$ref": "#/definitions/internal_auth_transport.registerReq"
                         }
                     }
                 ],
@@ -174,19 +182,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport.registerResp"
+                            "$ref": "#/definitions/internal_auth_transport.registerResp"
                         }
                     },
                     "400": {
                         "description": "Invalid request",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_transport_helpers.ErrorResponse"
+                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_transport_helpers.ErrorResponse"
+                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
                         }
                     }
                 }
@@ -212,19 +220,19 @@
                     "400": {
                         "description": "Invalid request or token",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_transport_helpers.ErrorResponse"
+                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "User not found",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_transport_helpers.ErrorResponse"
+                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/barter-port_internal_transport_helpers.ErrorResponse"
+                            "$ref": "#/definitions/barter-port_internal_libs_platform_http_api.ErrorResponse"
                         }
                     }
                 }
@@ -232,7 +240,7 @@
         }
     },
     "definitions": {
-        "barter-port_internal_transport_helpers.ErrorResponse": {
+        "barter-port_internal_libs_platform_http_api.ErrorResponse": {
             "type": "object",
             "properties": {
                 "error": {
@@ -241,7 +249,7 @@
                 }
             }
         },
-        "internal_transport.loginReq": {
+        "internal_auth_transport.loginReq": {
             "type": "object",
             "properties": {
                 "email": {
@@ -252,7 +260,7 @@
                 }
             }
         },
-        "internal_transport.loginResp": {
+        "internal_auth_transport.loginResp": {
             "type": "object",
             "properties": {
                 "accessToken": {
@@ -260,7 +268,7 @@
                 }
             }
         },
-        "internal_transport.meResp": {
+        "internal_auth_transport.meResp": {
             "type": "object",
             "properties": {
                 "userId": {
@@ -268,7 +276,7 @@
                 }
             }
         },
-        "internal_transport.refreshResponse": {
+        "internal_auth_transport.refreshResponse": {
             "type": "object",
             "properties": {
                 "access_token": {
@@ -276,7 +284,7 @@
                 }
             }
         },
-        "internal_transport.registerReq": {
+        "internal_auth_transport.registerReq": {
             "type": "object",
             "properties": {
                 "email": {
@@ -287,7 +295,7 @@
                 }
             }
         },
-        "internal_transport.registerResp": {
+        "internal_auth_transport.registerResp": {
             "type": "object",
             "properties": {
                 "email": {
